[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "freenodespider"
version = "0.1.0"
description = "AI-powered proxy node crawler — rule-first with LLM fallback"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.5.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
